[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/Character.gd" type="Script" id=1]
[ext_resource path="res://Characters/Animations/Idle.tres" type="Animation" id=2]
[ext_resource path="res://Characters/Animations/Jump.tres" type="Animation" id=3]
[ext_resource path="res://Characters/Animations/Run.tres" type="Animation" id=4]
[ext_resource path="res://Characters/Animations/SETUP.tres" type="Animation" id=5]
[ext_resource path="res://Characters/Animations/Walk.tres" type="Animation" id=6]
[ext_resource path="res://Characters/States/Idle.gd" type="Script" id=7]
[ext_resource path="res://Characters/States/Walk.gd" type="Script" id=8]
[ext_resource path="res://Characters/States/Jump.gd" type="Script" id=9]

[node name="Character" type="KinematicBody2D" groups=[
"Character",
]]
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_horizontal_guides_": [ -5.44509, 1.46724, -1.45569, 5.39777 ],
"_edit_vertical_guides_": [  ]
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]
root_node = NodePath("..")
autoplay = "SETUP"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Idle = ExtResource( 2 )
anims/Jump = ExtResource( 3 )
anims/Run = ExtResource( 4 )
anims/SETUP = ExtResource( 5 )
anims/Walk = ExtResource( 6 )
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="1"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Collision" type="CollisionPolygon2D" parent="." index="2"]
visible = false
z_index = 1
build_mode = 0
polygon = PoolVector2Array( 4, 1, 4, -3, -4, -3, -4, 1 )
_sections_unfolded = [ "Transform" ]

[node name="Normal" type="RayCast2D" parent="." index="3"]
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1 )
collision_mask = 1

[node name="BodyPivot" type="Position2D" parent="." index="4"]
position = Vector2( 0, -3 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Pivot" type="Position2D" parent="BodyPivot" index="0"]
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Body" type="Polygon2D" parent="BodyPivot/Pivot" index="0"]
polygon = PoolVector2Array( -4, 4, -4, -4, 4, -4, 4, 4 )
uv = PoolVector2Array(  )
splits = PoolIntArray(  )
color = Color( 0.137255, 0.0941176, 0.866667, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
skeleton = NodePath("")
invert_enable = false
invert_border = 100.0
bones = [  ]
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Texture", "Transform", "Visibility", "polygon", "splits" ]

[node name="Shadow" type="Polygon2D" parent="BodyPivot/Pivot" index="1"]
self_modulate = Color( 1, 1, 1, 0.541176 )
show_behind_parent = true
scale = Vector2( 2.5, 1 )
polygon = PoolVector2Array( -1.96512, 5, -1.96512, 3, 2.07233, 3, 2.07233, 5 )
uv = PoolVector2Array(  )
splits = PoolIntArray(  )
color = Color( 0.184314, 0.137255, 0.137255, 0.54902 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
skeleton = NodePath("")
invert_enable = false
invert_border = 100.0
bones = [  ]
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="States" type="Node" parent="." index="5"]

[node name="Idle" type="Node" parent="States" index="0"]
script = ExtResource( 7 )
_sections_unfolded = [ "GRAVITY" ]
GRAVITY = {
"Direction": Vector2( 0, 1 ),
"Force": Vector2( 0, 10 )
}

[node name="Walk" type="Node" parent="States" index="1"]
script = ExtResource( 8 )
GRAVITY = {
"Direction": Vector2( 0, 1 ),
"Force": Vector2( 0, 10 )
}
min_force = Vector2( 15, 0 )
max_force = Vector2( 30, 0 )
step_force = Vector2( 10, 0 )

[node name="Run" type="Node" parent="States" index="2"]

[node name="Jump" type="Node" parent="States" index="3"]
script = ExtResource( 9 )
GRAVITY = {
"Direction": Vector2( 0, 1 ),
"Force": Vector2( 0, 10 )
}
step_force = Vector2( 0, 0 )
min_force = Vector2( 0, 0 )
max_force = Vector2( 0, 0 )
JUMP_DURATION = 0.5
max_height = 0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_finished"]
